k8s.env/ingress/app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onboarding-exercise-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: onboarding.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clusterip-onboarding-app
                port:
                  number: 8080
